...
                                    currentCharacter: character)
                            }
                        }
                        // .accessibilityIdentifier("forEachCharacters")
                    }
                    .accessibilityIdentifier("scrollCharactersList")
                    .navigationTitle("Characters")
                    .accessibilityIdentifier("listCharacters")
                } else {
                    Text(viewModel.errorMessage!)
                }
            }
        }.task {
            await viewModel.loadCharacters()
...
